--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <body ng-app="myApp">
 
 <div ng-controller="myCtrl">
- <div read-text="ASJDASDKHAPIDOSAJDOISAUDIDUSA{IODUSAIODUSAIDSAIODUSAIO{DAUDAISOD" ng-if="readAloud" class="btn-group btn-group-spaced-sm btn-group-voice row-vspace-md">
-             <button class='start btn btn-start' value='start' type='button'></button>
-             <button class='stop btn btn-stop' value='stop' type='button'></button>
-             <button class='resume btn btn-resume' value='resume' type='button'></button>
-             <button class='pause btn btn-pause' value='pause' type='button'></button>
+ <div read-text="ASJDASDKHAPIDOSAJDOISAUDIDUSA{IODUSAIODUSAIDSAIODUSAIO{DAUDAISOD"  class="btn-group btn-group-spaced-sm btn-group-voice row-vspace-md">
+             <button class='start' value='start' type='button'></button>
+             <button class='stop' value='stop' type='button'></button>
+             <button class='resume' value='resume' type='button'></button>
+             <button class='pause' value='pause' type='button'></button>
 </div>
 </div>
 
