--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 <div ng-controller="myCtrl">
  <div read-text="ASJDASDKHAPIDOSAJDOISAUDIDUSA{IODUSAIODUSAIDSAIODUSAIO{DAUDAISOD"  class="btn-group btn-group-spaced-sm btn-group-voice row-vspace-md">
-             <button class='start' value='start' type='button'></button>
-             <button class='stop' value='stop' type='button'></button>
-             <button class='resume' value='resume' type='button'></button>
-             <button class='pause' value='pause' type='button'></button>
+             <button class='start' value='start' type='button'>START</button>
+             <button class='stop' value='stop' type='button'>STOP</button>
+             <button class='resume' value='resume' type='button'>RESUME</button>
+             <button class='pause' value='pause' type='button'>PAUSE</button>
 </div>
 </div>
 
