--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <script>
 var app = angular.module("myApp", []);
-app.directive(readText", function($rootScope,$interval) {
-    return {
+app.directive('readText', function ($rootScope,$interval) {
+        return {
             restrict: "A",
             link: function (scope, elem, attr) {
                 $rootScope.isPause = false;
@@ -103,7 +103,7 @@ app.directive(readText", function($rootScope,$interval) {
                 
             },
         };
-});
+    })
  </script>
   </body>
 </html>
