--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <script src="responsivevoice.js"></script>
 <script src="directives.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<body ng-app="myApp">
+<body ng-app="myApp" ng-controller="myCtrl">
 
-<div ng-controller="myCtrl">
+
  <div read-text="{{firstName}}"  class="btn-group btn-group-spaced-sm btn-group-voice row-vspace-md">
              <button class='start' value='start' type='button'>START</button>
              <button class='stop' value='stop' type='button'>STOP</button>
@@ -13,7 +13,7 @@
              <button class='pause' value='pause' type='button'>PAUSE</button>
 
 </div>
- </div>
+ 
 <script>
 var app = angular.module('myApp', []);
 app.controller('myCtrl', function($scope) {
