--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
              <button class='stop' value='stop' type='button'>STOP</button>
              <button class='resume' value='resume' type='button'>RESUME</button>
              <button class='pause' value='pause' type='button'>PAUSE</button>
+  <div class="form-group" style="padding: 12px 0;">
+                                    <span class="running-icon"></span>
+                                    <label for='rate'>Use the slider to change voice speed</label>
+                                          <input type='range' min='0.1' max='2.0' step='0.1' name='rate' id='rate' value='0.8'/>
+                                    <small class="text-muted pull-left">Slower</small>
+                                    <small class="text-muted pull-right">Faster</small>
+                                </div>
 
 </div>
  
