--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 var app = angular.module("myApp", []);
  app.controller('myCtrl', function($scope) {
-    $scope.firstName = "John";
+    $scope.firstName = "My birthday is the most amazing day in the whole year.Everytime this day arrives,i always get reminded that i was given the most amazing gift in the whole world.Life...Life is the most amazing gift that anybody could recieve.Of corse,on this special day i always want to spend with the most special people.I always love having my friends and family around me but especially on this day.They make my day even brighter.Usually,on my birthday i always wake up by the kisses and hugs of my mom.Then,my family gives me presents and say to me the best wishes.Afterwards,i do whatever i do everyday and when the evening comes i invite all of my friends at a place where we can celebrate my birthday.I always have a lot of fun and i get the best memories from these days.We tell stories,laugh,take pictures,have fun and make beautiful memories witch i will always remember.On this special day i also like to thank God for giving me the great opportunity to live.Also i'm thankfull to my parents for loving me every single day of the year.After the party is over i go home and celebrate with my family.We have a family dinner and my mother tells me stories from my childhood witch always put a smile on my face.After the dinner is over,i thank my parents and go to bed thinking how lucky i am to be who i am"
     
 });
 app.directive('readText', function ($rootScope,$interval) {
