--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                                     <small class="text-muted pull-left">Slower</small>
                                     <small class="text-muted pull-right">Faster</small>
                                 </div>
-  <button class='start' ng-click="resume()" type='button'>Resume fun</button>
-  <button class='start' ng-click="pause()" type='button'>Pause fun</button>
+  <button  ng-click="resume()" type='button'>Resume fun</button>
+  <button  ng-click="pause()" type='button'>Pause fun</button>
 
 </div>
  
