--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                                 </div>
   <button  ng-click="resume()" type='button'>Resume fun</button>
   <button  ng-click="pause()" type='button'>Pause fun</button>
-  <button  ng-click="start()" type='button'>Start fun</button>
+  <button  ng-click="start()" type='button'>Start func</button>
 
 </div>
  
