--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
  <div read-text="{{firstName}}"  class="btn-group btn-group-spaced-sm btn-group-voice row-vspace-md">
-             <button class='start' value='start' type='button'>STARTA</button>
+             <button class='start' value='start' type='button'>START</button>
              <button class='stop' value='stop' type='button'>STOP</button>
              <button class='resume' value='resume' type='button'>RESUME</button>
              <button class='pause' value='pause' type='button'>PAUSE</button>
@@ -70,7 +70,7 @@ app.directive('readText', function ($rootScope,$interval) {
                     });
                     text = $("<div></div>").html(text).text();
                     if (sUsrAg.indexOf("CrOS") > -1) {
-                        responsiveVoice.speak(text);
+                        responsiveVoice.speak(text,"Chrome OS US English");
                     } else {
                         responsiveVoice.speak(text, "US English Female", {
                             rate: rateInput.value,
