--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ app.directive('readText', function ($rootScope,$interval) {
             link: function (scope, elem, attr) {
                 $rootScope.isPause = false;
                 var sBrowser, sUsrAg = navigator.userAgent;
+              if (sUsrAg.indexOf("CrOS") > -1) {
+                     responsiveVoice.setDefaultVoice("Chrome OS US English");
+                   }
                 $(elem).find(".start").click(function () {
                     $rootScope.isPause = false;
                     var rateInput = document.getElementById('rate');
@@ -70,7 +73,7 @@ app.directive('readText', function ($rootScope,$interval) {
                     });
                     text = $("<div></div>").html(text).text();
                     if (sUsrAg.indexOf("CrOS") > -1) {
-                        responsiveVoice.speak(text,"Chrome OS US English");
+                        responsiveVoice.speak(text);
                     } else {
                         responsiveVoice.speak(text, "US English Female", {
                             rate: rateInput.value,
