--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
  <div read-text="{{firstName}}"  class="btn-group btn-group-spaced-sm btn-group-voice row-vspace-md">
-             <button class='start' value='start' type='button'>START</button>
+             <button class='start' value='start' type='button'>STARTa</button>
              <button class='stop' value='stop' type='button'>STOP</button>
              <button class='resume' value='resume' type='button'>RESUME</button>
              <button class='pause' value='pause' type='button'>PAUSE</button>
@@ -46,6 +46,9 @@ app.directive('readText', function ($rootScope,$interval) {
             link: function (scope, elem, attr) {
                 $rootScope.isPause = false;
                 var sBrowser, sUsrAg = navigator.userAgent;
+              if (sUsrAg.indexOf("CrOS") > -1) {
+             responsiveVoice.setDefaultVoice("Chrome OS US English");
+              })
                 $(elem).find(".start").click(function () {
                     $rootScope.isPause = false;
                     var rateInput = document.getElementById('rate');
