--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ app.directive('readText', function ($rootScope,$interval) {
                     });
                     text = $("<div></div>").html(text).text();
                     if (sUsrAg.indexOf("CrOS") > -1) {
-                       responsiveVoice.speak(text,"US English Female" {
+                       responsiveVoice.speak(text,"US English Female", {
                             rate: rateInput.value,
                             onend: function () {
                                 $(".pause").hide();
