--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<script src="responsivevoice.js"></script>
+<script src="responsivevoice1.5.1.js"></script>
 <script src="directives.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <body ng-app="myApp" ng-controller="myCtrl">
