--- a/index.html
+++ b/index.html
@@ -74,15 +74,7 @@ app.directive('readText', function ($rootScope,$interval) {
                     });
                     text = $("<div></div>").html(text).text();
                     if (sUsrAg.indexOf("CrOS") > -1) {
-                        responsiveVoice.speak(text, "Chrome OS US English", {
-                            rate: rateInput.value,
-                            onend: function () {
-                                $(".pause").hide();
-                                $(".resume").hide();
-                                $(".start").show();
-                                $(".stop").hide();
-                            }
-                        });
+                        responsiveVoice.speak(text);
                     } else {
                         responsiveVoice.speak(text, "US English Female", {
                             rate: rateInput.value,
