--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 </div>
  
-  <div read-text-passages="{{firstName}}"  class="btn-group btn-group-spaced-sm btn-group-voice row-vspace-md">----------Passage-----
+  <div read-text-passages-button="{{firstName}}"  class="btn-group btn-group-spaced-sm btn-group-voice row-vspace-md">----------Passage-----
              <button class='start' value='start' type='button'>STARTa</button>
              <button class='stop' value='stop' type='button'>STOP</button>
              <button class='resume' value='resume' type='button'>RESUME</button>
