--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <button  ng-click="start()" type='button'>Start func</button>
 
 </div>
- 
-  <div read-text-passages-button="{{firstName}}"  class="btn-group btn-group-spaced-sm btn-group-voice row-vspace-md">----------Passage-----
+ ---------------------------PASSAGES-------------------
+  <div read-text-passages-button="{{firstName}}"  class="btn-group btn-group-spaced-sm btn-group-voice row-vspace-md">
              <button class='start' value='start' type='button'>STARTa</button>
              <button class='stop' value='stop' type='button'>STOP</button>
              <button class='resume' value='resume' type='button'>RESUME</button>
