--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@ app.directive('readText', function ($rootScope,$interval) {
         };
     })
  
- app.directive('readTextPassagesButton', function ($rootScope,$interval,$scope) {
+ app.directive('readTextPassagesButton', function ($rootScope,$interval) {
         return {
             restrict: "A",
             link: function (scope, elem, attr) {
                 $rootScope.isPause = false;
-                $scope.readAloud = 1;
+                scope.readAloud = 1;
                 var sBrowser, sUsrAg = navigator.userAgent;
                 $rootScope.textSelectedByTouch="";
                 var rateInput = document.getElementById('rate');
@@ -177,7 +177,7 @@ app.directive('readText', function ($rootScope,$interval) {
                         $(this).hide();
                         $(elem).find(".pause").show();
                         $(elem).find(".stop").show();
-                        if($scope.readAloud == 1){
+                        if(scope.readAloud == 1){
                             if (sUsrAg.indexOf("Firefox") > -1) {
                                 sBrowser = "Mozilla Firefox";
                                 if (sBrowser = "Mozilla Firefox")
